<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">

    <include
        layout="@layout/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/request_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_apps"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="12dp" />

    <RadioGroup
        android:id="@+id/request_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <RadioButton
            android:id="@+id/request_filter_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/request_filter_all" />

        <RadioButton
            android:id="@+id/request_filter_proxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_filter_proxy" />

        <RadioButton
            android:id="@+id/request_filter_direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_filter_direct" />

        <RadioButton
            android:id="@+id/request_filter_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_filter_block" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/request_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp" />

</LinearLayout>
